--- a/css/media.css
+++ b/css/media.css
@@ -1,4 +1,172 @@
 
+ /*Extra small devices (portrait phones, less than 576px)*/
+ @media (max-width: 575.98px) { 
+ 	/*header*/
+ 	.menu ul li a {
+ 		font-size: 18px;
+ 		padding: 5px 0 !important;
+ 		text-align: right;
+ 	}
+/*slider   */
+.slider {
+	padding-bottom: 80px;
+}
+.s_content {
+	margin-top: 10px;
+}
+.s_content h1 {
+    font-size: 25px;
+    
+}
+.s_content h2 {
+	margin: 10px 0 15px;
+    font-size: 17px;
+}
+.s_icon li i {
+    font-size: 35px;
+    margin-right: 15px;
+}
+.s_ci [data-bs-target] {
+    width: 12px;
+    height: 12px;
+   
+}
+/*feature*/
+.feature {
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+.f_item {
+    margin-top: 50px;
+    text-align: center;
+} 
+.c_p {
+    letter-spacing: 0;
+}
+.f-icon  i {
+    font-size: 40px;
+}
+.f_c h1 {
+    font-size: 25px;
+    margin: 0 0 10px;
+}
+.f_c p {
+    font-size: 18px;
+}
+.f_h2 {
+    margin-bottom: 10px;
+    font-size: 20px;
+
+}
+/*contact*/
+.contact {
+    padding-top: 60px;
+    padding-bottom: 70px;
+}
+
+.e_m {
+    margin-left: 30px;
+}
+.m_t {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.c_form {
+    margin-bottom: 20px;
+}
+/*footer*/
+ footer {
+    padding-bottom: 70px;
+}
+.fc_p p{
+    text-align: center;
+}
+
+}
+
+
+
+
+ /*Small devices (landscape phones, 576px and up)*/
+@media (min-width: 576px) and (max-width: 767.98px) {
+	 	/*header*/
+	.menu ul li a {
+		font-size: 18px;
+		padding: 5px 0 !important;
+		text-align: right;
+}
+/*slider   */
+.slider {
+	padding-bottom: 80px;
+}
+.s_content {
+	margin-top: 10px;
+}
+.s_content h2 {
+	margin: 10px 0 15px;
+
+}
+.s_icon li i {
+    font-size: 35px;
+    margin-right: 15px;
+}
+.s_ci [data-bs-target] {
+    width: 12px;
+    height: 12px;
+   
+}
+/*feature*/
+.feature {
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+.f_item {
+    margin-top: 50px;
+    text-align: center;
+} 
+.f-icon  i {
+    font-size: 40px;
+}
+.f_c h1 {
+    font-size: 25px;
+    margin: 0 0 10px;
+}
+.f_c p {
+    font-size: 18px;
+}
+.f_h2 {
+    margin-bottom: 10px;
+    font-size: 20px;
+
+}
+
+/*contact*/
+.contact {
+    padding-top: 60px;
+    padding-bottom: 80px;
+}
+
+.e_m {
+    margin-left: 30px;
+}
+.m_t {
+    margin-top: 20px;
+    margin-bottom: 40px;
+}
+.c_form {
+    margin-bottom: 20px;
+}
+/*footer*/
+footer {
+    padding-bottom: 80px;
+}
+.fc_p p{
+    text-align: center;
+}
+
+}
+
+ /*Medium devices (tablets, 768px and up)*/
 @media (min-width: 768px) and (max-width: 991.98px) {
 	/*header*/
 	.menu ul li a {
