--- a/css/media.css
+++ b/css/media.css
@@ -22,10 +22,7 @@
 	margin: 10px 0 15px;
     font-size: 17px;
 }
-.s_icon li i {
-    font-size: 35px;
-    margin-right: 15px;
-}
+
 .s_ci [data-bs-target] {
     width: 12px;
     height: 12px;
@@ -60,7 +57,7 @@
 }
 /*contact*/
 .contact {
-    padding-top: 60px;
+    padding-top: 50px;
     padding-bottom: 70px;
 }
 
@@ -73,6 +70,15 @@
 }
 .c_form {
     margin-bottom: 20px;
+}
+.c_icon ul li {
+    margin-right: 15px;
+    
+}
+.c_icon ul li i {
+    font-size: 35px;
+    
+    
 }
 /*footer*/
  footer {
